--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -17,6 +17,8 @@
       href: functions-create-your-first-function-visual-studio.md
     - name: Skapa funktion – Java/Maven
       href: functions-create-first-java-maven.md
+    - name: Skapa funktion – Linux
+      href: functions-create-first-azure-function-azure-cli-linux.md
     - name: Utlösare
       items:
         - name: Blob Storage
@@ -47,6 +49,8 @@
       href: functions-openapi-definition.md
     - name: 4 – Ändra storlek på avbildning med Event Grid
       href: ../event-grid/resize-images-on-storage-blob-upload-event.md?toc=%2fazure%2fazure-functions%2ftoc.json
+    - name: 5 – Funktioner i en anpassad avbildning
+      href: functions-create-function-linux-custom-image.md
 - name: Exempel
   items:
     - name: Kodexempel
@@ -77,7 +81,7 @@
       href: functions-proxies.md
     - name: Functions-körning
       href: functions-runtime-overview.md
-    - name: Pålitliga funktioner
+    - name: Bestående funktioner
       items:
         - name: Översikt
           href: durable-functions-overview.md
