--- a/articles/sql-database/toc.yml
+++ b/articles/sql-database/toc.yml
@@ -200,9 +200,9 @@
     - name: SaaS med flera klientorganisationer
       items:
         - name: SaaS-designmönster
-          href: sql-database-design-patterns-multi-tenancy-saas-applications.md
+          href: saas-tenancy-app-design-patterns.md
         - name: Säkerhet för SaaS-app
-          href: sql-database-elastic-tools-multi-tenant-row-level-security.md
+          href: saas-tenancy-elastic-tools-multi-tenant-row-level-security.md
     - name: Utveckla databaser
       items:
         - name: JSON-data
@@ -337,24 +337,45 @@
           href: sql-database-elastic-scale-use-entity-framework-applications-visual-studio.md
     - name: SaaS med flera klientorganisationer
       items:
-        - name: Introduktion till självstudiekurs
-          href: sql-database-wtp-overview.md
-        - name: Distribuera exempelapp
-          href: sql-database-saas-tutorial.md
-        - name: Etablera klienter
-          href: sql-database-saas-tutorial-provision-and-catalog.md
-        - name: Övervaka databasprestanda
-          href: sql-database-saas-tutorial-performance-monitoring.md
-        - name: Övervaka med logganalys
-          href: sql-database-saas-tutorial-log-analytics.md
-        - name: Återställa en enskild klientorganisation
-          href: sql-database-saas-tutorial-restore-single-tenant.md
-        - name: Hantera klientorganisationsschema
-          href: sql-database-saas-tutorial-schema-management.md
-        - name: Köra ad hoc-frågor
-          href: sql-database-saas-tutorial-adhoc-analytics.md
-        - name: ETL för analys
-          href: sql-database-saas-tutorial-tenant-analytics.md
+        - name: Välkommen till Wingtips
+          href: saas-tenancy-welcome-wingtip-tickets-app.md
+        - name: Fristående program
+          items:
+            - name: Distribuera exempelapp
+              href: saas-standaloneapp-get-started-deploy.md
+        - name: Databas per klient
+          href: saas-dbpertenant-wingtip-app-overview.md
+          items:
+            - name: Introduktion till självstudiekurs
+              href: saas-dbpertenant-wingtip-app-overview.md
+            - name: Riktlinjer för app
+              href: saas-dbpertenant-wingtip-app-guidance-tips.md
+            - name: Distribuera exempelapp
+              href: saas-dbpertenant-get-started-deploy.md
+            - name: Etablera klienter
+              href: saas-dbpertenant-provision-and-catalog.md
+            - name: Övervaka databasprestanda
+              href: saas-dbpertenant-performance-monitoring.md
+            - name: Övervaka med logganalys
+              href: saas-dbpertenant-log-analytics.md
+            - name: Återställa en klient
+              href: saas-dbpertenant-restore-single-tenant.md
+            - name: Hantera klientorganisationsschema
+              href: saas-tenancy-schema-management.md
+            - name: Köra ad hoc-frågor
+              href: saas-tenancy-adhoc-analytics.md
+            - name: ETL för analys
+              href: saas-tenancy-tenant-analytics.md
+        - name: Databas för flera klienter
+          items:
+            - name: Distribuera exempelapp
+              href: saas-multitenantdb-get-started-deploy.md
+            - name: Övervaka databasprestanda
+              href: saas-multitenantdb-performance-monitoring.md
+            - name: Köra ad hoc-frågor
+              href: saas-multitenantdb-adhoc-reporting.md
+            - name: Hantera klientorganisationsschema
+              href: saas-multitenantdb-schema-management.md
     - name: Utveckla appar
       items:
         - name: C och C ++
