--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -80,15 +80,21 @@
           href: sizes-general.md
     - name: Underhåll och uppdateringar
       href: maintenance-and-updates.md
-    - name: Lagring
+    - name: Disklagring
       href: about-disks-and-vhds.md
       items:
+        - name: Managed Disks
+          href: managed-disks-overview.md
         - name: Premium Storage
           href: premium-storage.md
         - name: Premium-lagringsprestanda
           href: premium-storage-performance.md
         - name: Standard Storage
           href: standard-storage.md
+        - name: Skalbarhetsmål för diskar
+          href: disk-scalability-targets.md
+        - name: Lagring och haveriberedskap för diskar
+          href: backup-and-disaster-recovery-for-azure-iaas-disks.md
     - name: Nätverk
       href: network-overview.md
     - name: Skala program automatiskt
@@ -113,6 +119,8 @@
       items:
         - name: 'Använda C#'
           href: csharp.md
+        - name: Använda specialiserad disk
+          href: create-vm-specialized.md
         - name: 'Använda en mall med C#'
           href: csharp-template.md
         - name: Skapa en virtuell dator med Chef
@@ -154,6 +162,8 @@
           href: ../../backup/tutorial-backup-vm-at-scale.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
     - name: Hantera virtuella datorer
       items:
+        - name: Förskottsbetala för virtuella datorer – reserverade instanser
+          href: prepay-reserved-vm-instances.md
         - name: Vanliga PowerShell-åtgärder
           href: ps-common-ref.md
         - name: Flytta en virtuell dator
@@ -186,12 +196,10 @@
           href: cli-ps-findimage.md
         - name: Förbereda en virtuell dator för uppladdning
           href: prepare-for-upload-vhd-image.md
-        - name: Använda generaliserad avbildning
-          href: create-vm-generalized-managed.md
-        - name: Använda specialiserad disk
-          href: create-vm-specialized.md
         - name: Spela in den virtuella datorn till avbildning
           href: capture-image-resource.md
+        - name: Använda generaliserad avbildning
+          href: create-vm-generalized-managed.md
         - name: Skapa en avbildning med Packer
           href: build-image-with-packer.md
         - name: Använda Windows-klientavbildningar
@@ -241,8 +249,6 @@
               href: excel-cluster-hpcpack.md
     - name: Hantera lagring
       items:
-        - name: Mer information om Managed Disks
-          href: managed-disks-overview.md
         - name: Vanliga frågor och svar om diskar
           href: faq-for-disks.md
         - name: Lägg till en disk
@@ -255,8 +261,6 @@
           href: detach-disk.md
         - name: Ändra storlek på en disk
           href: expand-os-disk.md
-        - name: Lagring och haveriberedskap för diskar
-          href: backup-and-disaster-recovery-for-azure-iaas-disks.md
         - name: Ögonblicksbild av en disk
           href: snapshot-copy-managed-disk.md
         - name: Säkerhetskopiera ohanterade diskar
