--- a/articles/cost-management/toc.yml
+++ b/articles/cost-management/toc.yml
@@ -32,6 +32,6 @@
     - name: Prissättning
       href: 'https://azure.microsoft.com/pricing/details/cost-management'
     - name: Regional tillgänglighet
-      href: 'https://azure-staging.microsoft.com/en-us/regions/services/'
+      href: 'https://azure.microsoft.com/en-us/regions/services/'
     - name: VANLIGA FRÅGOR OCH SVAR
       href: cost-mgt-faq.md
