--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -77,7 +77,7 @@
         - name: Databehandling med höga prestanda
           href: sizes-hpc.md
         - name: Azure-beräkningsenheter (ACU)
-          href: sizes-general.md
+          href: acu.md
     - name: Underhåll och uppdateringar
       href: maintenance-and-updates.md
     - name: Disklagring
