--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -44,7 +44,7 @@
         - name: 'Wordpress: portal'
           href: 'https://portal.azure.com/#create/WordPress.WordPress'
         - name: 'PHP: Azure CLI'
-          href: ../app-service/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json
+          href: ../app-service/containers/tutorial-php-mysql-app.md?toc=%2fazure%2fmysql%2ftoc.json
 - name: Exempel
   items:
     - name: Azure CLI
@@ -109,6 +109,8 @@
           href: howto-restore-server-cli.md
     - name: Anslut program
       items:
+        - name: Skapa användare
+          href: howto-create-users.md
         - name: Anslutningssträngar
           href: howto-connection-string.md
         - name: Konfigurera SSL
